--- a/twitter_ios_starter/Twitter/Base.lproj/Main.storyboard
+++ b/twitter_ios_starter/Twitter/Base.lproj/Main.storyboard
@@ -97,6 +97,12 @@
                         <textAttributes key="titleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </textAttributes>
+                        <navigationBarAppearance key="standardAppearance">
+                            <color key="backgroundColor" systemColor="linkColor"/>
+                        </navigationBarAppearance>
+                        <navigationBarAppearance key="scrollEdgeAppearance">
+                            <color key="backgroundColor" systemColor="linkColor"/>
+                        </navigationBarAppearance>
                     </navigationBar>
                     <connections>
                         <segue destination="5RX-wR-fex" kind="relationship" relationship="rootViewController" id="MGb-dm-G7f"/>
