--- a/twitter_ios_starter/Twitter/Base.lproj/Main.storyboard
+++ b/twitter_ios_starter/Twitter/Base.lproj/Main.storyboard
@@ -58,13 +58,49 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="sN0-jM-9Vh">
-                                <rect key="frame" x="0.0" y="44.5" width="375" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tweetCell" rowHeight="141" id="sN0-jM-9Vh" customClass="TweetCellTableViewCell" customModule="Twitter" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44.5" width="375" height="141"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="sN0-jM-9Vh" id="Ihj-zM-krZ">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="141"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SZW-R1-WAx">
+                                            <rect key="frame" x="16" y="11" width="65" height="65"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="65" id="Jik-2f-UWh"/>
+                                                <constraint firstAttribute="height" constant="65" id="t3K-iJ-HBM"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="John Doe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yLz-if-RFg">
+                                            <rect key="frame" x="89" y="11" width="56.5" height="14.5"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dnz-Iv-tha">
+                                            <rect key="frame" x="89" y="29.5" width="286" height="111.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="7"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottom" secondItem="Dnz-Iv-tha" secondAttribute="bottom" id="WY5-ae-TKK"/>
+                                        <constraint firstAttribute="trailing" secondItem="Dnz-Iv-tha" secondAttribute="trailing" id="Wy6-do-Lfc"/>
+                                        <constraint firstItem="SZW-R1-WAx" firstAttribute="leading" secondItem="Ihj-zM-krZ" secondAttribute="leadingMargin" id="iLQ-n0-7lb"/>
+                                        <constraint firstItem="yLz-if-RFg" firstAttribute="leading" secondItem="SZW-R1-WAx" secondAttribute="trailing" constant="8" id="iyR-bp-CFh"/>
+                                        <constraint firstItem="Dnz-Iv-tha" firstAttribute="leading" secondItem="SZW-R1-WAx" secondAttribute="trailing" constant="8" id="ny6-Fs-kHB"/>
+                                        <constraint firstItem="yLz-if-RFg" firstAttribute="top" secondItem="Ihj-zM-krZ" secondAttribute="topMargin" id="ocr-cu-Gag"/>
+                                        <constraint firstItem="Dnz-Iv-tha" firstAttribute="top" secondItem="yLz-if-RFg" secondAttribute="bottom" constant="4" id="tAl-Ri-Keb"/>
+                                        <constraint firstItem="SZW-R1-WAx" firstAttribute="top" secondItem="Ihj-zM-krZ" secondAttribute="topMargin" id="u1l-Eu-tu2"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="profileImageView" destination="SZW-R1-WAx" id="dia-ki-kbV"/>
+                                    <outlet property="tweetsContent" destination="Dnz-Iv-tha" id="gtC-CH-c4w"/>
+                                    <outlet property="usernameLabel" destination="yLz-if-RFg" id="5UL-bU-lpQ"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -83,7 +119,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2R7-Vb-XFW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1932" y="164"/>
+            <point key="canvasLocation" x="1932" y="163.26836581709148"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="zYe-F2-NY3">
