--- a/twitter_ios_starter/Twitter/Base.lproj/Main.storyboard
+++ b/twitter_ios_starter/Twitter/Base.lproj/Main.storyboard
@@ -65,35 +65,38 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="141"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SZW-R1-WAx">
-                                            <rect key="frame" x="16" y="11" width="65" height="65"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SZW-R1-WAx">
+                                            <rect key="frame" x="16" y="19" width="95" height="101"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="65" id="Jik-2f-UWh"/>
                                                 <constraint firstAttribute="height" constant="65" id="t3K-iJ-HBM"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="John Doe" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yLz-if-RFg">
-                                            <rect key="frame" x="89" y="11" width="56.5" height="14.5"/>
+                                            <rect key="frame" x="121" y="16" width="56.5" height="14.5"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dnz-Iv-tha">
-                                            <rect key="frame" x="89" y="29.5" width="286" height="111.5"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="7"/>
+                                            <rect key="frame" x="121" y="40.5" width="228" height="79.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="bottom" secondItem="Dnz-Iv-tha" secondAttribute="bottom" id="WY5-ae-TKK"/>
-                                        <constraint firstAttribute="trailing" secondItem="Dnz-Iv-tha" secondAttribute="trailing" id="Wy6-do-Lfc"/>
-                                        <constraint firstItem="SZW-R1-WAx" firstAttribute="leading" secondItem="Ihj-zM-krZ" secondAttribute="leadingMargin" id="iLQ-n0-7lb"/>
-                                        <constraint firstItem="yLz-if-RFg" firstAttribute="leading" secondItem="SZW-R1-WAx" secondAttribute="trailing" constant="8" id="iyR-bp-CFh"/>
-                                        <constraint firstItem="Dnz-Iv-tha" firstAttribute="leading" secondItem="SZW-R1-WAx" secondAttribute="trailing" constant="8" id="ny6-Fs-kHB"/>
-                                        <constraint firstItem="yLz-if-RFg" firstAttribute="top" secondItem="Ihj-zM-krZ" secondAttribute="topMargin" id="ocr-cu-Gag"/>
-                                        <constraint firstItem="Dnz-Iv-tha" firstAttribute="top" secondItem="yLz-if-RFg" secondAttribute="bottom" constant="4" id="tAl-Ri-Keb"/>
-                                        <constraint firstItem="SZW-R1-WAx" firstAttribute="top" secondItem="Ihj-zM-krZ" secondAttribute="topMargin" id="u1l-Eu-tu2"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Dnz-Iv-tha" secondAttribute="bottom" constant="10" id="0d0-Mz-EBI"/>
+                                        <constraint firstItem="yLz-if-RFg" firstAttribute="leading" secondItem="Ihj-zM-krZ" secondAttribute="leading" constant="121" id="5vT-wh-qiz"/>
+                                        <constraint firstItem="Dnz-Iv-tha" firstAttribute="top" secondItem="yLz-if-RFg" secondAttribute="bottom" constant="10" id="633-aY-o2X"/>
+                                        <constraint firstItem="yLz-if-RFg" firstAttribute="top" secondItem="Ihj-zM-krZ" secondAttribute="topMargin" constant="5" id="6b6-PB-LC2"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Dnz-Iv-tha" secondAttribute="bottom" constant="10" id="6eZ-uk-icC"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="yLz-if-RFg" secondAttribute="trailing" constant="20" symbolic="YES" id="BUL-lS-Dzn"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Dnz-Iv-tha" secondAttribute="trailing" constant="10" id="JIf-Z4-9ZK"/>
+                                        <constraint firstItem="SZW-R1-WAx" firstAttribute="top" secondItem="Ihj-zM-krZ" secondAttribute="topMargin" constant="8" id="PQ1-nw-tf2"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="SZW-R1-WAx" secondAttribute="bottom" constant="10" id="Zlk-uS-i3q"/>
+                                        <constraint firstItem="SZW-R1-WAx" firstAttribute="leading" secondItem="Ihj-zM-krZ" secondAttribute="leadingMargin" id="baK-YI-PDg"/>
+                                        <constraint firstItem="yLz-if-RFg" firstAttribute="leading" secondItem="SZW-R1-WAx" secondAttribute="trailing" constant="10" id="kSo-hK-e41"/>
+                                        <constraint firstItem="Dnz-Iv-tha" firstAttribute="leading" secondItem="SZW-R1-WAx" secondAttribute="trailing" constant="10" id="vlu-J0-UKl"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
